--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  z-index: 1;
 }
 #root {
   background-color: white;
@@ -15,6 +16,7 @@ body {
   place-items: center;
   width: 100%;
   height: 100%;
+  font-family: sans-serif;
   /* min-width: 320px;
   min-height: 100vh; */
 }
